SSC-1070 increase z-index value to avoid overlapping with chosen <select> and bootstrap dropdown

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-header.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-header.less
@@ -1,12 +1,9 @@
-/*
-** c- Header
-**/
 .header-fixed() {
     border-bottom: solid 1px rgba(255,255,255,.3);
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 1100;
 }
 
 .header.parbase {
@@ -18,7 +15,7 @@
 
     &__container {
         background-color: @black;
-        z-index: 1000;
+        z-index: 1100;
     }
 
     &__inner {
